--- a/src/components/containers/projects.astro
+++ b/src/components/containers/projects.astro
@@ -13,8 +13,9 @@ const regularProjects = projects.filter((project) => !project.featured);
 
 <Container showTopLine={false}>
     <Grid
-        patternSize={20}
+        patternSize={24}
         enableGradient={true}
+        gradientSize={90}
         gradientDirection={"to-bottom"}
         class="absolute inset-0 w-full h-full opacity-20 pointer-events-none"
     />
