--- a/src/components/containers/soon.astro
+++ b/src/components/containers/soon.astro
@@ -10,10 +10,25 @@ import DiagonalLines from "@/components/patters/diagonal-lines.astro";
     class="h-auto flex flex-col gap-6"
 >
     <section class="flex items-start gap-6 p-6">
-        <DiagonalLines
-            class="absolute inset-0 w-full h-full pointer-events-none bg-blue-300/20"
-        />
-        <p class="z-2">
+        <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="absolute inset-0 w-full h-full pointer-events-none stroke-border transition-all duration-300 ease-in-out group-hover:stroke-primary"
+        >
+            <defs>
+                <pattern
+                    id={`diagonalPattern-1`}
+                    patternUnits="userSpaceOnUse"
+                    width="10"
+                    height="10"
+                    patternTransform="rotate(45)"
+                >
+                    <line x1="0" y1="0" x2="0" y2="10" stroke-width="1"></line>
+                </pattern>
+            </defs>
+            <rect width="100%" height="100%" fill={`url(#diagonalPattern-1)`}
+            ></rect>
+        </svg>
+        <p class="z-2 relative text-foreground">
             Soon i add more information about me and my portfolio ❤️
         </p>
     </section>
