--- a/src/components/patters/diagonal-lines.astro
+++ b/src/components/patters/diagonal-lines.astro
@@ -4,6 +4,7 @@ interface Props {
 }
 
 const { class: className = "" } = Astro.props;
+const patternId = `diagonalPattern-${Math.random().toString(36).substr(2, 9)}`;
 ---
 
 <svg
@@ -14,14 +15,20 @@ const { class: className = "" } = Astro.props;
 >
     <defs>
         <pattern
-            id="diagonalPattern"
+            id={patternId}
             patternUnits="userSpaceOnUse"
             width="10"
             height="10"
             patternTransform="rotate(45)"
         >
-            <line x1="0" y1="0" x2="0" y2="10" stroke-width="1"></line>
+            <line
+                x1="0"
+                y1="0"
+                x2="0"
+                y2="10"
+                stroke="currentColor"
+                stroke-width="1"></line>
         </pattern>
     </defs>
-    <rect width="100%" height="100%" fill="url(#diagonalPattern)"></rect>
+    <rect width="100%" height="100%" fill={`url(#${patternId})`}></rect>
 </svg>
