--- a/src/components/containers/soon.astro
+++ b/src/components/containers/soon.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@/components/container.astro";
 import DiagonalLines from "@/components/patters/diagonal-lines.astro";
+import { TranslatedText } from "@/components/translated-text";
 ---
 
 <Container
@@ -28,8 +29,11 @@ import DiagonalLines from "@/components/patters/diagonal-lines.astro";
             <rect width="100%" height="100%" fill={`url(#diagonalPattern-1)`}
             ></rect>
         </svg>
-        <p class="z-2 relative text-foreground">
-            Soon i add more information about me and my portfolio ❤️
-        </p>
+        <TranslatedText
+            path="soon.message"
+            as="p"
+            className="z-2 relative text-foreground"
+            client:load
+        />
     </section>
 </Container>
